Updated links to use Github Pages

--- a/index.html
+++ b/index.html
@@ -748,5 +748,5 @@
     <script src="src/moduleManager.js"></script>
     <script src="src/sprintClient.js"></script>
     <script src="src/main.js"></script> -->
-    <script type="module" src="downloadSprint.js"></script>
+    <script type="module" src="/src/main.js"></script>
 </body></html>
