--- a/index.html
+++ b/index.html
@@ -743,6 +743,7 @@
 
     -->   
     <script src="src/globs.js"></script>
+    <script src="src/extension.js"></script>
     <!-- <script src="src/window.js"></script>
     <script src="src/ui.js"></script>
     <script src="src/moduleManager.js"></script>
